# PETBrainPreprocessing

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
petbrainpreprocessing/: pet_brain_preprocessing.py
petbrainpreprocessing/interfaces/: hdbet.py  synthstrip.py
petbrainpreprocessing/workflows/: preprocessing_workflow.py
