[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pet_brain_preprocessing"
version = "0.1.1"
description = "Robust Nipype pipeline for preprocessing PET BIDS brain data. Initially developed for 18F FDG PET brain images acquired by project NEMO at the Dep of Neurology, University Medical Center Groningen. https://www.movementdisordersgroningen.com/nl/nemo"
authors = [
  { name = "Jelle R. Dalenberg", email = "j.r.dalenberg@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    'Development Status :: 1 - Concept',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache License 2.0',  
    'Operating System :: Unix',        
    'Programming Language :: Python :: 3.9'
]
requires-python = ">=3.9"
dependencies = [
    'nipype>=1.8.5',
    'bids',
    'templateflow>=23.0.0',
    'nibabel>=5.0.1',
    'NetworkX==2.6',
                      
]

[project.scripts]
pet_brain_preprocessing = "petbrainpreprocessing.pet_brain_preprocessing:main"

[project.urls]
"Homepage" = "https://github.com/jrdalenberg/pet-brain-preprocessing"
"Bug Tracker" = "https://github.com/jrdalenberg/pet-brain-preprocessing/issues"